[gd_scene load_steps=35 format=4 uid="uid://d0rsqv6ke871x"]

[ext_resource type="Script" path="res://Scripts/Menu Scripts/game_over.gd" id="1_erkun"]
[ext_resource type="Texture2D" uid="uid://dpx7l7w4racro" path="res://Sprites/Environment/Tiles/Grass_Middle.png" id="2_bcmqi"]
[ext_resource type="Texture2D" uid="uid://djuhmld0ncgyi" path="res://Sprites/Environment/Tiles/FarmLand_Tile.png" id="3_p8fps"]
[ext_resource type="Texture2D" uid="uid://bvxi6v7r0xocq" path="res://Sprites/Environment/Tiles/Beach_Tile.png" id="4_71y50"]
[ext_resource type="Texture2D" uid="uid://1sdkfipibgm4" path="res://Sprites/Environment/Tiles/Cliff_Tile.png" id="5_wr576"]
[ext_resource type="Texture2D" uid="uid://bxff7urf5po0p" path="res://Sprites/Environment/Outdoor decoration/Oak_Tree_Small.png" id="6_0yiol"]
[ext_resource type="Texture2D" uid="uid://c603de7wv2ngn" path="res://Sprites/Environment/Outdoor decoration/Outdoor_Decor_Free.png" id="7_ve5vn"]
[ext_resource type="Texture2D" uid="uid://c5xt41tmpn2e3" path="res://Sprites/Environment/Tiles/Path_Middle.png" id="8_6anvo"]
[ext_resource type="Texture2D" uid="uid://clidwd8tbuy0n" path="res://Sprites/Environment/Tiles/Path_Tile.png" id="9_sw7c6"]
[ext_resource type="Texture2D" uid="uid://ci10hvvbyny11" path="res://Sprites/Environment/Tiles/Water_Middle.png" id="10_12rdw"]
[ext_resource type="Texture2D" uid="uid://bikhum55kifdt" path="res://Sprites/Environment/Tiles/Water_Tile.png" id="11_00v1j"]
[ext_resource type="Texture2D" uid="uid://crbg1aytndras" path="res://Sprites/Environment/Outdoor decoration/House.png" id="12_8shdk"]
[ext_resource type="Texture2D" uid="uid://h0g21uugjjjf" path="res://Sprites/Environment/Outdoor decoration/Oak_Tree.png" id="13_0dibb"]
[ext_resource type="FontFile" uid="uid://dy4hr1uf6lccv" path="res://Fonts/vinque/vinque rg.otf" id="14_chnfi"]
[ext_resource type="AudioStream" uid="uid://p3g6u1qkyg8" path="res://Music&Sounds/Sounds/506052__mellau__button-click-3.wav" id="15_tf8bg"]
[ext_resource type="FontFile" uid="uid://df7cd6vi8cqa8" path="res://Fonts/game-paused-demo/Game Paused DEMO.otf" id="16_c3ybl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nk87i"]
texture = ExtResource("3_p8fps")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_moeqo"]
sources/0 = SubResource("TileSetAtlasSource_nk87i")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6p0sn"]
texture = ExtResource("4_71y50")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_04g36"]
texture = ExtResource("5_wr576")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4flxx"]
texture = ExtResource("6_0yiol")
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mwlo2"]
texture = ExtResource("7_ve5vn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4gmpd"]
texture = ExtResource("3_p8fps")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5k2yb"]
texture = ExtResource("2_bcmqi")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wpndt"]
texture = ExtResource("8_6anvo")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3622u"]
texture = ExtResource("9_sw7c6")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_38xaw"]
texture = ExtResource("10_12rdw")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2w4fy"]
texture = ExtResource("11_00v1j")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qoa7i"]
texture = ExtResource("12_8shdk")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g7uhw"]
texture = ExtResource("13_0dibb")
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
1:4/0 = 0
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_6gslh"]
sources/0 = SubResource("TileSetAtlasSource_6p0sn")
sources/1 = SubResource("TileSetAtlasSource_04g36")
sources/2 = SubResource("TileSetAtlasSource_4gmpd")
sources/3 = SubResource("TileSetAtlasSource_5k2yb")
sources/4 = SubResource("TileSetAtlasSource_wpndt")
sources/5 = SubResource("TileSetAtlasSource_3622u")
sources/6 = SubResource("TileSetAtlasSource_38xaw")
sources/7 = SubResource("TileSetAtlasSource_2w4fy")
sources/8 = SubResource("TileSetAtlasSource_qoa7i")
sources/9 = SubResource("TileSetAtlasSource_g7uhw")
sources/10 = SubResource("TileSetAtlasSource_4flxx")
sources/11 = SubResource("TileSetAtlasSource_mwlo2")

[sub_resource type="LabelSettings" id="LabelSettings_4hci6"]
font = ExtResource("14_chnfi")
font_size = 32
font_color = Color(0.797659, 0.185957, 1.92523e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mgaot"]
font = ExtResource("14_chnfi")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_vq8mu"]
font = ExtResource("14_chnfi")
font_size = 24

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_erkun")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0
texture = ExtResource("2_bcmqi")

[node name="BGLayer" type="TileMapLayer" parent="TextureRect"]
tile_map_data = PackedByteArray("AAA9ACEAAAAAAAAAAAA9ACIAAAAAAAEAAAA9ACMAAAAAAAIAAAA+ACEAAAABAAAAAAA+ACIAAAABAAEAAAA+ACMAAAABAAIAAAA/ACEAAAACAAAAAAA/ACIAAAACAAEAAAA/ACMAAAACAAIAAAA9ACUAAAAAAAAAAAA9ACYAAAAAAAEAAAA9ACcAAAAAAAIAAAA+ACUAAAABAAAAAAA+ACYAAAABAAEAAAA+ACcAAAABAAIAAAA/ACUAAAACAAAAAAA/ACYAAAACAAEAAAA/ACcAAAACAAIAAABBACEAAAAAAAAAAABBACIAAAAAAAEAAABBACMAAAAAAAIAAABCACEAAAABAAAAAABCACIAAAABAAEAAABCACMAAAABAAIAAABDACEAAAACAAAAAABDACIAAAACAAEAAABDACMAAAACAAIAAABBACUAAAAAAAAAAABBACYAAAAAAAEAAABBACcAAAAAAAIAAABCACUAAAABAAAAAABCACYAAAABAAEAAABCACcAAAABAAIAAABDACUAAAACAAAAAABDACYAAAACAAEAAABDACcAAAACAAIAAABFACUAAAAAAAAAAABFACYAAAAAAAEAAABFACcAAAAAAAIAAABGACUAAAABAAAAAABGACYAAAABAAEAAABGACcAAAABAAIAAABHACUAAAACAAAAAABHACYAAAACAAEAAABHACcAAAACAAIAAABFACEAAAAAAAAAAABFACIAAAAAAAEAAABFACMAAAAAAAIAAABGACEAAAABAAAAAABGACIAAAABAAEAAABGACMAAAABAAIAAABHACEAAAACAAAAAABHACIAAAACAAEAAABHACMAAAACAAIAAAA=")
tile_set = SubResource("TileSet_moeqo")

[node name="FGLayer" type="TileMapLayer" parent="TextureRect"]
tile_map_data = PackedByteArray("AAAFACMABwAAAAAAAAAFACQABwAAAAEAAAAFACUABwAAAAIAAAAGACMABwABAAAAAAAGACQABwABAAEAAAAGACUABwABAAIAAAAHACMABwACAAAAAAAHACQABwACAAEAAAAHACUABwACAAIAAABCAAUABQACAAAAAABDAAMABQAAAAAAAABDAAQABQAAAAEAAABDAAUABQAAAAIAAABEAAMABQABAAAAAABEAAQABQABAAEAAABEAAUABQABAAIAAAACAAMABQAAAAAAAAACAAQABQAAAAEAAAACAAUABQAAAAIAAAADAAMABQABAAAAAAADAAQABQABAAEAAAADAAUABQABAAIAAAAEAAMABQACAAAAAAAEAAQABQACAAEAAAAEAAUABQACAAIAAAAEAAYABQAAAAAAAAAEAAcABQAAAAEAAAAEAAgABQAAAAIAAAAFAAYABQABAAAAAAAFAAcABQABAAEAAAAFAAgABQABAAIAAAAGAAYABQACAAAAAAAGAAcABQACAAEAAAAGAAgABQACAAIAAAAHAAQABQAAAAAAAAAHAAUABQAAAAEAAAAHAAYABQAAAAIAAAAIAAQABQABAAAAAAAIAAUABQABAAEAAAAIAAYABQABAAIAAAAJAAQABQACAAAAAAAJAAUABQACAAEAAAAJAAYABQACAAIAAAAKAAYABQAAAAAAAAAKAAcABQAAAAEAAAAKAAgABQAAAAIAAAALAAYABQABAAAAAAALAAcABQABAAEAAAALAAgABQABAAIAAAAMAAYABQACAAAAAAAMAAcABQACAAEAAAAMAAgABQACAAIAAAANAAQABQAAAAAAAAANAAUABQAAAAEAAAANAAYABQAAAAIAAAAOAAQABQABAAAAAAAOAAUABQABAAEAAAAOAAYABQABAAIAAAAPAAQABQACAAAAAAAPAAUABQACAAEAAAAPAAYABQACAAIAAAAOAAEABQAAAAAAAAAOAAIABQAAAAEAAAAOAAMABQAAAAIAAAAPAAEABQABAAAAAAAPAAIABQABAAEAAAAPAAMABQABAAIAAAAQAAEABQACAAAAAAAQAAIABQACAAEAAAAQAAMABQACAAIAAAARAAIABQAAAAAAAAARAAMABQAAAAEAAAARAAQABQAAAAIAAAASAAIABQABAAAAAAASAAMABQABAAEAAAASAAQABQABAAIAAAATAAIABQACAAAAAAATAAMABQACAAEAAAATAAQABQACAAIAAAAUAAQABQAAAAAAAAAUAAUABQAAAAEAAAAUAAYABQAAAAIAAAAVAAQABQABAAAAAAAVAAUABQABAAEAAAAVAAYABQABAAIAAAAWAAQABQACAAAAAAAWAAUABQACAAEAAAAWAAYABQACAAIAAAAYAAUABQAAAAAAAAAYAAYABQAAAAEAAAAYAAcABQAAAAIAAAAZAAUABQABAAAAAAAZAAYABQABAAEAAAAZAAcABQABAAIAAAAaAAUABQACAAAAAAAaAAYABQACAAEAAAAaAAcABQACAAIAAAAZAAIABQAAAAAAAAAZAAMABQAAAAEAAAAZAAQABQAAAAIAAAAaAAIABQABAAAAAAAaAAMABQABAAEAAAAaAAQABQABAAIAAAAbAAIABQACAAAAAAAbAAMABQACAAEAAAAbAAQABQACAAIAAAAcAAEABQAAAAAAAAAcAAIABQAAAAEAAAAcAAMABQAAAAIAAAAdAAEABQABAAAAAAAdAAIABQABAAEAAAAdAAMABQABAAIAAAAeAAEABQACAAAAAAAeAAIABQACAAEAAAAeAAMABQACAAIAAAAdAAUABQAAAAAAAAAdAAYABQAAAAEAAAAdAAcABQAAAAIAAAAeAAUABQABAAAAAAAeAAYABQABAAEAAAAeAAcABQABAAIAAAAfAAUABQACAAAAAAAfAAYABQACAAEAAAAfAAcABQACAAIAAAAgAAMABQAAAAAAAAAgAAQABQAAAAEAAAAgAAUABQAAAAIAAAAhAAMABQABAAAAAAAhAAQABQABAAEAAAAhAAUABQABAAIAAAAiAAMABQACAAAAAAAiAAQABQACAAEAAAAiAAUABQACAAIAAAAjAAUABQAAAAAAAAAjAAYABQAAAAEAAAAjAAcABQAAAAIAAAAkAAUABQABAAAAAAAkAAYABQABAAEAAAAkAAcABQABAAIAAAAlAAUABQACAAAAAAAlAAYABQACAAEAAAAlAAcABQACAAIAAAAkAAEABQAAAAAAAAAkAAIABQAAAAEAAAAkAAMABQAAAAIAAAAlAAEABQABAAAAAAAlAAIABQABAAEAAAAlAAMABQABAAIAAAAmAAEABQACAAAAAAAmAAIABQACAAEAAAAmAAMABQACAAIAAABFACUACwAEAAIAAABFACYACwADAAIAAABFACcACwADAAIAAABGACUACwAEAAEAAABGACYACwAEAAIAAABGACcACwAEAAEAAABHACUACwAEAAEAAABHACYACwADAAIAAABHACcACwAEAAIAAABBACUACwADAAEAAABBACYACwADAAIAAABBACcACwAEAAEAAABCACUACwADAAEAAABCACYACwADAAEAAABCACcACwADAAIAAABDACUACwAEAAIAAABDACYACwAEAAEAAABDACcACwADAAEAAAA9ACUACwADAAEAAAA9ACYACwADAAEAAAA9ACcACwADAAIAAAA+ACUACwAEAAIAAAA+ACYACwAEAAIAAAA+ACcACwADAAEAAAA/ACUACwAEAAEAAAA/ACYACwADAAEAAAA/ACcACwADAAIAAAA9ACEACwAGAAIAAAA9ACIACwAFAAIAAAA9ACMACwAGAAEAAAA+ACEACwAFAAEAAAA+ACIACwAGAAIAAAA+ACMACwAGAAIAAAA/ACIACwAFAAEAAAA/ACMACwAGAAEAAABBACEACwAFAAEAAABBACIACwAGAAIAAABCACEACwAGAAIAAABCACIACwAGAAEAAABDACEACwAGAAEAAABDACIACwAGAAIAAABFACEACwAGAAEAAABFACIACwAGAAIAAABFACMAAgAAAAIAAABGACEACwAFAAIAAABGACIACwAGAAIAAABGACMACwAFAAEAAABHACEACwAFAAEAAABHACIACwAFAAIAAABHACMACwAGAAIAAAA6AAQAAQAAAAAAAAA6AAUAAQAAAAEAAAA6AAYAAQAAAAIAAAA7AAQAAQABAAAAAAA7AAUAAQABAAEAAAA7AAYAAQABAAIAAAA8AAQAAQACAAAAAAA8AAUAAQACAAEAAAA8AAYAAQACAAIAAAA3AAYAAQAAAAAAAAA3AAcAAQAAAAEAAAA3AAgAAQAAAAIAAAA4AAYAAQABAAAAAAA4AAcAAQABAAEAAAA4AAgAAQABAAIAAAA5AAYAAQACAAAAAAA5AAcAAQACAAEAAAA5AAgAAQACAAIAAAA6AAgAAQAAAAAAAAA6AAkAAQAAAAEAAAA6AAoAAQAAAAIAAAA7AAgAAQABAAAAAAA7AAkAAQABAAEAAAA7AAoAAQABAAIAAAA8AAgAAQACAAAAAAA8AAkAAQACAAEAAAA8AAoAAQACAAIAAAAxABYACAAAAAEAAAAxABcACAAAAAIAAAAxABgACAAAAAMAAAAxABkACAAAAAQAAAAxABoACAAAAAUAAAAxABsACAAAAAYAAAAyABUACAABAAAAAAAyABYACAABAAEAAAAyABcACAABAAIAAAAyABgACAABAAMAAAAyABkACAABAAQAAAAyABoACAABAAUAAAAyABsACAABAAYAAAAzABUACAACAAAAAAAzABYACAACAAEAAAAzABcACAACAAIAAAAzABgACAACAAMAAAAzABkACAACAAQAAAAzABoACAACAAUAAAAzABsACAACAAYAAAA0ABUACwAAAAcAAAA0ABYACAADAAEAAAA0ABcACAADAAIAAAA0ABgACAADAAMAAAA0ABkACAADAAQAAAA0ABoACAADAAUAAAA0ABsACAADAAYAAAA1ABYACAAEAAEAAAA1ABcACAAEAAIAAAA1ABgACAAEAAMAAAA1ABkACAAEAAQAAAA1ABoACAAEAAUAAAA1ABsACAAEAAYAAAA4ABMACAAAAAEAAAA4ABQACAAAAAIAAAA4ABUACAAAAAMAAAA4ABYACAAAAAQAAAA4ABcACAAAAAUAAAA4ABgACAAAAAYAAAA5ABIACAABAAAAAAA5ABMACAABAAEAAAA5ABQACAABAAIAAAA5ABUACAABAAMAAAA5ABYACAABAAQAAAA5ABcACAABAAUAAAA5ABgACAABAAYAAAA6ABIACAACAAAAAAA6ABMACAACAAEAAAA6ABQACAACAAIAAAA6ABUACAACAAMAAAA6ABYACAACAAQAAAA6ABcACAACAAUAAAA6ABgACAACAAYAAAA7ABIACAADAAAAAAA7ABMACAADAAEAAAA7ABQACAADAAIAAAA7ABUACAADAAMAAAA7ABYACAADAAQAAAA7ABcACAADAAUAAAA7ABgACAADAAYAAAA8ABMACAAEAAEAAAA8ABQACAAEAAIAAAA8ABUACAAEAAMAAAA8ABYACAAEAAQAAAA8ABcACAAEAAUAAAA8ABgACAAEAAYAAAA/ABgACAAAAAEAAAA/ABkACAAAAAIAAAA/ABoACAAAAAMAAAA/ABsACAAAAAQAAAA/ABwACAAAAAUAAAA/AB0ACAAAAAYAAABAABcACAABAAAAAABAABgACAABAAEAAABAABkACAABAAIAAABAABoACAABAAMAAABAABsACAABAAQAAABAABwACAABAAUAAABAAB0ACAABAAYAAABBABcACAACAAAAAABBABgACAACAAEAAABBABkACAACAAIAAABBABoACAACAAMAAABBABsACAACAAQAAABBABwACAACAAUAAABBAB0ACAACAAYAAABCABcACAADAAAAAABCABgACAADAAEAAABCABkACAADAAIAAABCABoACAADAAMAAABCABsACAADAAQAAABCABwACAADAAUAAABCAB0ACAADAAYAAABDABgACAAEAAEAAABDABkACAAEAAIAAABDABoACAAEAAMAAABDABsACAAEAAQAAABDABwACAAEAAUAAABDAB0ACAAEAAYAAABCAAoACAAAAAEAAABCAAsACAAAAAIAAABCAAwACAAAAAMAAABCAA0ACAAAAAQAAABCAA4ACAAAAAUAAABCAA8ACAAAAAYAAABDAAkACAABAAAAAABDAAoACAABAAEAAABDAAsACAABAAIAAABDAAwACAABAAMAAABDAA0ACAABAAQAAABDAA4ACAABAAUAAABDAA8ACAABAAYAAABEAAkACAACAAAAAABEAAoACAACAAEAAABEAAsACAACAAIAAABEAAwACAACAAMAAABEAA0ACAACAAQAAABEAA4ACAACAAUAAABEAA8ACAACAAYAAABFAAkACAADAAAAAABFAAoACAADAAEAAABFAAsACAADAAIAAABFAAwACAADAAMAAABFAA0ACAADAAQAAABFAA4ACAADAAUAAABFAA8ACAADAAYAAABGAAoACAAEAAEAAABGAAsACAAEAAIAAABGAAwACAAEAAMAAABGAA0ACAAEAAQAAABGAA4ACAAEAAUAAABGAA8ACAAEAAYAAAAAAAwACAAAAAEAAAAAAA0ACAAAAAIAAAAAAA4ACAAAAAMAAAAAAA8ACAAAAAQAAAAAABAACAAAAAUAAAAAABEACAAAAAYAAAABAAsACAABAAAAAAABAAwACAABAAEAAAABAA0ACAABAAIAAAABAA4ACAABAAMAAAABAA8ACAABAAQAAAABABAACAABAAUAAAABABEACAABAAYAAAACAAsACAACAAAAAAACAAwACAACAAEAAAACAA0ACAACAAIAAAACAA4ACAACAAMAAAACAA8ACAACAAQAAAACABAACAACAAUAAAACABEACAACAAYAAAADAAsACAADAAAAAAADAAwACAADAAEAAAADAA0ACAADAAIAAAADAA4ACAADAAMAAAADAA8ACAADAAQAAAADABAACAADAAUAAAADABEACAADAAYAAAAEAAwACAAEAAEAAAAEAA0ACAAEAAIAAAAEAA4ACAAEAAMAAAAEAA8ACAAEAAQAAAAEABAACAAEAAUAAAAEABEACAAEAAYAAAAFABQACAAAAAEAAAAFABUACAAAAAIAAAAFABYACAAAAAMAAAAFABcACAAAAAQAAAAFABgACAAAAAUAAAAFABkACAAAAAYAAAAGABMACAABAAAAAAAGABQACAABAAEAAAAGABUACAABAAIAAAAGABYACAABAAMAAAAGABcACAABAAQAAAAGABgACAABAAUAAAAGABkACAABAAYAAAAHABMACAACAAAAAAAHABQACAACAAEAAAAHABUACAACAAIAAAAHABYACAACAAMAAAAHABcACAACAAQAAAAHABgACAACAAUAAAAHABkACAACAAYAAAAIABMACAADAAAAAAAIABQACAADAAEAAAAIABUACAADAAIAAAAIABYACAADAAMAAAAIABcACAADAAQAAAAIABgACAADAAUAAAAIABkACAADAAYAAAAJABQACAAEAAEAAAAJABUACAAEAAIAAAAJABYACAAEAAMAAAAJABcACAAEAAQAAAAJABgACAAEAAUAAAAJABkACAAEAAYAAAANABsACAAAAAEAAAANABwACAAAAAIAAAANAB0ACAAAAAMAAAANAB4ACAAAAAQAAAANAB8ACAAAAAUAAAANACAACAAAAAYAAAAOABoACAABAAAAAAAOABsACAABAAEAAAAOABwACAABAAIAAAAOAB0ACAABAAMAAAAOAB4ACAABAAQAAAAOAB8ACAABAAUAAAAOACAACAABAAYAAAAPABoACAACAAAAAAAPABsACAACAAEAAAAPABwACAACAAIAAAAPAB0ACAACAAMAAAAPAB4ACAACAAQAAAAPAB8ACAACAAUAAAAPACAACAACAAYAAAAQABoACAADAAAAAAAQABsACAADAAEAAAAQABwACAADAAIAAAAQAB0ACAADAAMAAAAQAB4ACAADAAQAAAAQAB8ACAADAAUAAAAQACAACAADAAYAAAARABsACAAEAAEAAAARABwACAAEAAIAAAARAB0ACAAEAAMAAAARAB4ACAAEAAQAAAARAB8ACAAEAAUAAAARACAACAAEAAYAAAASABMACAAAAAEAAAASABQACAAAAAIAAAASABUACAAAAAMAAAASABYACAAAAAQAAAASABcACAAAAAUAAAASABgACAAAAAYAAAATABIACAABAAAAAAATABMACAABAAEAAAATABQACAABAAIAAAATABUACAABAAMAAAATABYACAABAAQAAAATABcACAABAAUAAAATABgACAABAAYAAAAUABIACAACAAAAAAAUABMACAACAAEAAAAUABQACAACAAIAAAAUABUACAACAAMAAAAUABYACAACAAQAAAAUABcACAACAAUAAAAUABgACAACAAYAAAAVABIACAADAAAAAAAVABMACAADAAEAAAAVABQACAADAAIAAAAVABUACAADAAMAAAAVABYACAADAAQAAAAVABcACAADAAUAAAAVABgACAADAAYAAAAWABMACAAEAAEAAAAWABQACAAEAAIAAAAWABUACAAEAAMAAAAWABYACAAEAAQAAAAWABcACAAEAAUAAAAWABgACAAEAAYAAAAOABUACQAAAAEAAAAOABYACQAAAAIAAAAOABcACQAAAAMAAAAPABQACQABAAAAAAAPABUACQABAAEAAAAPABYACQABAAIAAAAPABcACQABAAMAAAAPABgACQABAAQAAAAQABQACQACAAAAAAAQABUACQACAAEAAAAQABYACQACAAIAAAAQABcACQACAAMAAAAQABgACQACAAQAAAARABUACQADAAEAAAARABYACQADAAIAAAARABcACQADAAMAAAA2ABsACQAAAAEAAAA2ABwACQAAAAIAAAA2AB0ACQAAAAMAAAA3ABoACQABAAAAAAA3ABsACQABAAEAAAA3ABwACQABAAIAAAA3AB0ACQABAAMAAAA3AB4ACQABAAQAAAA4ABoACQACAAAAAAA4ABsACQACAAEAAAA4ABwACQACAAIAAAA4AB0ACQACAAMAAAA4AB4ACQACAAQAAAA5ABsACQADAAEAAAA5ABwACQADAAIAAAA5AB0ACQADAAMAAAA+AA4ACQAAAAEAAAA+AA8ACQAAAAIAAAA+ABAACQAAAAMAAAA/AA0ACQABAAAAAAA/AA4ACQABAAEAAAA/AA8ACQABAAIAAAA/ABAACQABAAMAAAA/ABEACQABAAQAAABAAA0ACQACAAAAAABAAA4ACQACAAEAAABAAA8ACQACAAIAAABAABAACQACAAMAAABAABEACQACAAQAAABBAA4ACQADAAEAAABBAA8ACQADAAIAAABBABAACQADAAMAAAAFAAsACQAAAAEAAAAFAAwACQAAAAIAAAAFAA0ACQAAAAMAAAAGAAoACQABAAAAAAAGAAsACQABAAEAAAAGAAwACQABAAIAAAAGAA0ACQABAAMAAAAGAA4ACQABAAQAAAAHAAoACQACAAAAAAAHAAsACQACAAEAAAAHAAwACQACAAIAAAAHAA0ACQACAAMAAAAHAA4ACQACAAQAAAAIAAsACQADAAEAAAAIAAwACQADAAIAAAAIAA0ACQADAAMAAABEABwACgAEAAAAAABEAB0ACgAEAAEAAABFABwACgAFAAAAAABFAB0ACgAFAAEAAAAXABgACwAEAAYAAAALAB8ACgAEAAAAAAALACAACgAEAAEAAAAMAB8ACgAFAAAAAAAMACAACgAFAAEAAAADABkACwABAAIAAAAEABgACwAEAAUAAAAEABkACwAEAAYAAAAIACQACgAAAAEAAAAIACUACgAAAAIAAAAJACQACgABAAEAAAAJACUACgAAAAEAAAAJACYABwABAAAAAAAKACUACgABAAEAAAAKACYABwACAAAAAAA+AB8ACgAAAAEAAAA+ACAACwAFAAAAAAA/AB8ACgABAAEAAAA/ACAACgABAAIAAAA6ACYACgAAAAEAAAA6ACcACgAAAAIAAAA7ACYACgABAAEAAAA7ACcACgABAAIAAAAwABkACwAEAAQAAAAwABoACwAEAAUAAAAwABsACwAEAAYAAAA3ABYACwAEAAQAAAA3ABcACwAEAAUAAAA3ABgACwAEAAYAAABHAA0ACwAEAAQAAABHAA4ACwAEAAUAAABHAA8ACwAEAAYAAAAFABAACwAEAAQAAAAFABEACwAEAAUAAAAFABIACwAEAAYAAAAEABcACwAEAAQAAAAKABcACwAEAAQAAAAKABgACwAEAAUAAAAKABkACwAEAAYAAAASAB4ACwAEAAQAAAASAB8ACwAEAAUAAAASACAACwAEAAYAAAAXABYACwAEAAQAAAAXABcACwAEAAUAAAAKACEACwAAAAcAAAALACEACwABAAcAAAA9ABgACwAAAAcAAAA+ABgACwABAAcAAAA1ABUACwABAAcAAAA2ABoACwACAAoAAAA+AB0ACwACAAoAAAAnAAEACwABAAkAAAAcAAQACwABAAkAAAAbAAEACwABAAkAAAAQAAQACwABAAkAAAAHAAMACwABAAkAAAABAAMACwABAAkAAAADAAgACwABAAkAAAAEAAkACwAAAAoAAAANAAgACwAAAAoAAAAWAAMACwAAAAoAAAAaAAgACwAAAAoAAAAmAAcACwAAAAoAAAAnAAMABQAAAAAAAAAnAAQABQAAAAEAAAAnAAUABQAAAAIAAAAoAAMABQABAAAAAAAoAAQABQABAAEAAAAoAAUABQABAAIAAAApAAMABQACAAAAAAApAAQABQACAAEAAAApAAUABQACAAIAAAAqAAUABQAAAAAAAAAqAAYABQAAAAEAAAAqAAcABQAAAAIAAAArAAUABQABAAAAAAArAAYABQABAAEAAAArAAcABQABAAIAAAAsAAUABQACAAAAAAAsAAYABQACAAEAAAAsAAcABQACAAIAAAAtAAQABQAAAAAAAAAtAAUABQAAAAEAAAAtAAYABQAAAAIAAAAuAAQABQABAAAAAAAuAAUABQABAAEAAAAuAAYABQABAAIAAAAvAAQABQACAAAAAAAvAAUABQACAAEAAAAvAAYABQACAAIAAAAuAAAABQAAAAAAAAAuAAEABQAAAAEAAAAuAAIABQAAAAIAAAAvAAAABQABAAAAAAAvAAEABQABAAEAAAAvAAIABQABAAIAAAAwAAAABQACAAAAAAAwAAEABQACAAEAAAAwAAIABQACAAIAAAAxAAMABQAAAAAAAAAxAAQABQAAAAEAAAAxAAUABQAAAAIAAAAyAAMABQABAAAAAAAyAAQABQABAAEAAAAyAAUABQABAAIAAAAzAAMABQACAAAAAAAzAAQABQACAAEAAAAzAAUABQACAAIAAAA0AAEABQAAAAAAAAA0AAIABQAAAAEAAAA0AAMABQAAAAIAAAA1AAEABQABAAAAAAA1AAIABQABAAEAAAA1AAMABQABAAIAAAA2AAEABQACAAAAAAA2AAIABQACAAEAAAA2AAMABQACAAIAAAA0AAUABQAAAAAAAAA0AAYABQAAAAEAAAA0AAcABQAAAAIAAAA1AAUABQABAAAAAAA1AAYABQABAAEAAAA1AAcABQABAAIAAAA2AAUABQACAAAAAAA2AAYABQACAAEAAAA2AAcABQACAAIAAAA3AAIABQAAAAAAAAA3AAMABQAAAAEAAAA3AAQABQAAAAIAAAA4AAIABQABAAAAAAA4AAMABQABAAEAAAA4AAQABQABAAIAAAA5AAIABQACAAAAAAA5AAMABQACAAEAAAA5AAQABQACAAIAAAA7AAAABQAAAAAAAAA7AAIABQAAAAIAAAA8AAAABQABAAAAAAA8AAEABQABAAEAAAA8AAIABQABAAIAAAA9AAAABQACAAAAAAA9AAEABQACAAEAAAA9AAIABQACAAIAAAA9AAMABQAAAAAAAAA9AAQABQAAAAEAAAA9AAUABQAAAAIAAAA+AAMABQABAAAAAAA+AAQABQABAAEAAAA+AAUABQABAAIAAAA/AAMABQACAAAAAAA/AAQABQACAAEAAAA/AAUABQACAAIAAABAAAUABQAAAAAAAABAAAYABQAAAAEAAABAAAcABQAAAAIAAABBAAUABQABAAAAAABBAAYABQABAAEAAABBAAcABQABAAIAAABCAAYABQACAAEAAABCAAcABQACAAIAAABBAAAABQAAAAAAAABBAAEABQAAAAEAAABBAAIABQAAAAIAAABCAAAABQABAAAAAABCAAEABQABAAEAAABCAAIABQABAAIAAABDAAAABQACAAAAAABDAAEABQACAAEAAABDAAIABQACAAIAAABFAAMABQACAAAAAABFAAQABQACAAEAAABFAAUABQACAAIAAABHAAUABQABAAAAAABHAAYABQABAAEAAABHAAcABQABAAIAAABGAAUABQAAAAAAAABGAAYABQAAAAEAAABGAAcABQAAAAIAAAAAAAAABQAAAAAAAAAAAAEABQAAAAEAAAAAAAIABQAAAAIAAAABAAAABQABAAAAAAABAAEABQABAAEAAAABAAIABQABAAIAAAACAAAABQACAAAAAAACAAEABQACAAEAAAACAAIABQACAAIAAAAAAAUABQACAAAAAAAAAAYABQACAAEAAAAAAAcABQACAAIAAAARACYABgAAAAAAAAARACcABgAAAAAAAAARACgABgAAAAAAAAASACYABgAAAAAAAAASACcABgAAAAAAAAASACgABgAAAAAAAAATACYABgAAAAAAAAATACcABwAAAAUAAAATACgABgAAAAAAAAAUACYABgAAAAAAAAAUACcABgAAAAAAAAAUACgABwABAAUAAAAVACYABwACAAUAAAAVACcABgAAAAAAAAAVACgABgAAAAAAAAAWACYABgAAAAAAAAAWACcABgAAAAAAAAAWACgABgAAAAAAAAAXACYABgAAAAAAAAAXACcABgAAAAAAAAAXACgABgAAAAAAAAAYACYABgAAAAAAAAAYACcABgAAAAAAAAAYACgABgAAAAAAAAAZACYABgAAAAAAAAAZACcABgAAAAAAAAAZACgABgAAAAAAAAAaACYABwAAAAUAAAAaACcABgAAAAAAAAAaACgABgAAAAAAAAAbACYABgAAAAAAAAAbACcABwABAAUAAAAbACgABgAAAAAAAAAcACYABgAAAAAAAAAcACcABgAAAAAAAAAcACgABgAAAAAAAAAdACYABgAAAAAAAAAdACcABgAAAAAAAAAdACgABgAAAAAAAAAeACYABgAAAAAAAAAeACcABgAAAAAAAAAeACgABgAAAAAAAAAfACYABgAAAAAAAAAfACcABgAAAAAAAAAfACgABgAAAAAAAAAgACYABgAAAAAAAAAgACcABgAAAAAAAAAgACgABgAAAAAAAAAhACYABgAAAAAAAAAhACcABgAAAAAAAAAhACgABgAAAAAAAAAiACYABgAAAAAAAAAiACcABgAAAAAAAAAiACgABgAAAAAAAAAjACYABgAAAAAAAAAjACcABgAAAAAAAAAjACgABgAAAAAAAAAkACYABgAAAAAAAAAkACcABwAAAAUAAAAkACgABgAAAAAAAAAlACYABwACAAUAAAAlACcABgAAAAAAAAAlACgABgAAAAAAAAAmACYABgAAAAAAAAAmACcABgAAAAAAAAAmACgABgAAAAAAAAAnACYABgAAAAAAAAAnACcABgAAAAAAAAAnACgABgAAAAAAAAAoACYABgAAAAAAAAAoACcABwACAAUAAAAoACgABgAAAAAAAAApACYABwAAAAUAAAApACcABgAAAAAAAAApACgABgAAAAAAAAAqACYABgAAAAAAAAAqACcABgAAAAAAAAAqACgABgAAAAAAAAArACYABgAAAAAAAAArACcABgAAAAAAAAArACgABgAAAAAAAAAsACYABgAAAAAAAAAsACcABgAAAAAAAAAsACgABgAAAAAAAAAtACYABgAAAAAAAAAtACcABgAAAAAAAAAtACgABgAAAAAAAAAuACYABgAAAAAAAAAuACcABgAAAAAAAAAuACgABgAAAAAAAAAvACYABgAAAAAAAAAvACcABgAAAAAAAAAvACgABgAAAAAAAAAwACYABgAAAAAAAAAwACcABgAAAAAAAAAwACgABwABAAUAAAAxACYABgAAAAAAAAAxACcABwACAAUAAAAxACgABgAAAAAAAAAyACYABwAAAAQAAAAyACcABgAAAAAAAAAyACgABgAAAAAAAAAzACYABwABAAAAAAAzACcABgAAAAAAAAAzACgABgAAAAAAAAA0ACYABwABAAAAAAA0ACcABgAAAAAAAAA0ACgABgAAAAAAAAA1ACYABwACAAAAAAA1ACcABwAAAAQAAAA1ACgABwAAAAUAAAAPACgABgAAAAAAAAAPACcABgAAAAAAAAAQACYABwABAAQAAAAQACUABwAAAAAAAAARACUABwABAAAAAAASACUABwABAAAAAAATACUABwABAAAAAAAUACUABwABAAAAAAAVACUABwABAAAAAAAWACUABwABAAQAAAAXACUABgAAAAAAAAAYACUABgAAAAAAAAAYACQABwABAAAAAAAZACQABwABAAAAAAAaACQABwABAAAAAAAbACQABwABAAAAAAAcACQABwABAAAAAAAdACQABwABAAAAAAAeACQABwABAAAAAAAfACQABwABAAAAAAAgACQABwABAAAAAAAhACQABwABAAAAAAAiACQABwABAAAAAAAjACQABwABAAAAAAAkACQABwABAAAAAAAlACQABwABAAAAAAAmACQABwABAAAAAAAnACQABwABAAAAAAAoACQABwACAAAAAAApACUABwABAAAAAAAqACUABwABAAAAAAArACUABwABAAAAAAAsACUABwABAAAAAAAtACUABwABAAAAAAAuACUABwABAAAAAAAvACUABwABAAAAAAAwACUABwABAAAAAAAxACUABwABAAAAAAAyACUABwACAAAAAAA2ACcABwACAAAAAAA2ACgABwAAAAQAAAA3ACgABwACAAAAAAA4ACgAAwAAAAAAAAA5ACgAAwAAAAAAAAA6ACgAAwAAAAAAAAA7ACgAAwAAAAAAAAA8ACgAAwAAAAAAAAA9ACgAAwAAAAAAAAA+ACgAAwAAAAAAAAA/ACgAAwAAAAAAAABAACgAAwAAAAAAAABBACgAAwAAAAAAAABCACgAAwAAAAAAAABDACgAAwAAAAAAAABEACgAAwAAAAAAAABFACgAAwAAAAAAAABGACgAAwAAAAAAAABHACgAAwAAAAAAAAAQACcABgAAAAAAAAAQACgABgAAAAAAAAAZACUABgAAAAAAAAAaACUABgAAAAAAAAAbACUABgAAAAAAAAAcACUABgAAAAAAAAAdACUABgAAAAAAAAAeACUABgAAAAAAAAAfACUABgAAAAAAAAAgACUABwAAAAUAAAAhACUABwACAAUAAAAiACUABgAAAAAAAAAjACUABgAAAAAAAAAkACUABgAAAAAAAAAlACUABgAAAAAAAAAmACUABgAAAAAAAAAnACUABgAAAAAAAAAoACUABwAAAAQAAAAOACgABwAAAAUAAAANACgABgAAAAAAAAAMACgABgAAAAAAAAALACgABgAAAAAAAAAKACgABgAAAAAAAAAJACgABgAAAAAAAAAIACgABgAAAAAAAAAHACgABgAAAAAAAAAGACgABgAAAAAAAAAFACgABgAAAAAAAAAEACgABgAAAAAAAAADACgABgAAAAAAAAACACgABgAAAAAAAAABACgABgAAAAAAAAAAACgABgAAAAAAAAAFACcABwABAAAAAAAGACcABwABAAAAAAAHACcABwABAAQAAAAIACcABwAAAAUAAAAJACcABgAAAAAAAAAKACcABwAAAAQAAAALACcABwABAAAAAAAMACcABwABAAAAAAANACcABwABAAQAAAAFACYAAwAAAAAAAAAEACYABwACAAEAAAADACYABgAAAAAAAAADACUABwABAAAAAAACACUABwAAAAQAAAACACQABwACAAAAAAABACQABwABAAAAAAAAACQABwABAAAAAAAAACUABwAAAAUAAAAAACYABgAAAAAAAAAAACcABgAAAAAAAAABACcABwAAAAUAAAACACcABwABAAUAAAADACcABgAAAAAAAAAEACcABwAAAAQAAAACACYABgAAAAAAAAABACYABgAAAAAAAAABACUABgAAAAAAAAAOACcABgAAAAAAAAAIACYABwABAAAAAAAHACYABwAAAAAAAAAPACYABwABAAAAAAAOACYABwABAAAAAAAWACQABwAAAAAAAAAXACQABwABAAAAAAAEACUABwACAAAAAAANACYABwAAAAAAAAAsABAACgACAAAAAAAsABEACgACAAEAAAAsABIACgACAAIAAAAtABAACgADAAAAAAAtABEACgADAAEAAAAtABIACgADAAIAAAAvABIACgACAAAAAAAvABMACgACAAEAAAAvABQACgACAAIAAAAwABIACgADAAAAAAAwABMACgADAAEAAAAwABQACgADAAIAAAAsABMACgAEAAAAAAAsABQACgAEAAEAAAAtABMACgAFAAAAAAAtABQACgAFAAEAAABGACQACwADAAAAAABGACAACwAFAAAAAABCACAACwAFAAAAAAA+ACQACwADAAAAAABCACQACwADAAAAAABBACMACwAFAAEAAAA/ACEACwAFAAIAAABDACMACwAFAAIAAABCACMACwAFAAIAAAATACAACwACAAIAAAASACEACwABAAIAAAAJAA8ACwACAAIAAAAKABAACwACAAIAAAA4AAoACwACAAIAAAAjAAIACwACAAIAAAARAAUACwACAAIAAAAJAAcACwACAAIAAABFAAYACwACAAIAAAAIAAgACwABAAIAAAAJABAACwABAAIAAAA5AAsACwABAAIAAAA7AAEABQAAAAEAAAA6AAEACwABAAIAAAArAAQACwABAAIAAAANAAEACwABAAIAAAAPAAAACwABAAIAAAADAAAACwABAAIAAAAtACAACwABAAIAAAAYABgACwABAAIAAABBAA0ACwABAAIAAABCABAACwABAAIAAABEABoACwABAAIAAABEABUACwABAAIAAAARABgACwACAAcAAABHABAACwACAAcAAABAAAwACwACAAcAAABBAAsACwACAAcAAABGAAEACwACAAcAAAAUAAIACwACAAcAAAALAAQACwACAAcAAAA3ACMACwACAAcAAAAsAB8ACwACAAcAAAAWACEACwAAAAoAAAA3ABMACwAAAAoAAAA1ABIACwAAAAoAAAAZABIACwAAAAoAAAAMABMACwAAAAoAAAAEAB4ACwAAAAoAAAAhAAkACwAAAAoAAAANACQACwABAAsAAAABACIACwABAAsAAAA4ACYACwABAAsAAAAtACIACwABAAsAAAAZABwACwABAAsAAAAmABEACwABAAsAAAAcABQACwABAAsAAAAgABAACwAAAAkAAAAwAAkACwAAAAkAAAAyAAcACwAAAAkAAAASAAsACwAAAAkAAAAAABUACwAAAAkAAAADABMACwABAAkAAAABABwACwABAAkAAAATAAgACwABAAkAAAAIAAEACwABAAkAAAABAAoACwABAAkAAAAzAAAACwABAAkAAAAsAAAACwABAAkAAAAfAAIACwABAAkAAAAqAAoACwABAAkAAAAdAAkACwABAAkAAAAlAAoACwABAAkAAAAkAA0ACwAAAAgAAAA=")
tile_set = SubResource("TileSet_6gslh")

[node name="GrayBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -275.5
offset_right = 513.0
offset_bottom = 275.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 0.658824)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 656.0
color = Color(0.363639, 0.354444, 0.377916, 0.223529)

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 577.0
offset_bottom = 174.0
grow_horizontal = 2

[node name="Tittle" type="Label" parent="CenterContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("14_chnfi")
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_4hci6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 106.0
offset_right = 683.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("14_chnfi")
text = "STATS"
label_settings = SubResource("LabelSettings_mgaot")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsBox" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.0
offset_top = -480.0
offset_right = 337.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("14_chnfi")
text = "..."
label_settings = SubResource("LabelSettings_vq8mu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(477, 301)
stream = ExtResource("15_tf8bg")

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 973.0
offset_top = 548.0
offset_right = 1078.0
offset_bottom = 588.0
theme_override_fonts/font = ExtResource("16_c3ybl")
text = "Quit"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
